fix(toast): toast do not display correctly on mobile (fix #5)

--- a/src/toast/modern.css
+++ b/src/toast/modern.css
@@ -1,6 +1,5 @@
 .bl-toast-container {
-  bottom: 20px;
-  width: 100%;
+  bottom: 30px;
   gap: 1rem;
   align-items: center;
 }
