--- a/src/toast/style.css
+++ b/src/toast/style.css
@@ -1,10 +1,15 @@
 .bl-toast-container {
   position: fixed;
   z-index: 9999;
-  left: 0;
   display: flex;
   flex-direction: column;
+  justify-content: flex-end;
   pointer-events: none;
+  overflow: hidden;
+  width: 100vw;
+  left: 0;
+  right: 0;
+  bottom: 0;
 }
 
 .bl-toast {
